# be_twitter

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  sqlx-data.json
configuration/: base.yaml
migrations/: 20220217000826_auth_one.down.sql  20220217233615_sqlx_initial_setup.down.sql  20220217233752_auth_one.up.sql  20220218003328_auth_two.up.sql  20220218010856_auth_one.up.sql  20220218011939_auth_two.up.sql
scripts/: init.sql
src/: api.rs  config.rs  configurations.rs  controllers.rs  errors.rs  helpers.rs  lib.rs  main.rs  middlewares.rs  setup.rs  startup.rs
src/api/: authorize_bot.rs  basic_response.rs  handle_redirect.rs  health_check.rs  not_found.rs  timeline.rs
src/api/auth/: user.rs
src/app/: client.rs  server.rs
src/base_repository/: commons.rs
src/config/: db_settings.rs
src/configurations/: application_settings.rs  db_settings.rs  settings.rs  variables.rs
src/controllers/:  Implement Iterator for SettingsVars t.rs  access_token.rs  authorize_bot.rs  basic_response.rs  destroy.rs  handle_delete.rs  handle_redirect.rs  health_check.rs  not_found.rs  oauth_flow.rs  refresh_token.rs  revoke_token.rs  timeline.rs  user_lookup.rs
src/entities/manage_deletes/: prelude.rs
src/errors/: common.rs  redis_errors.rs  response.rs  twitter_errors.rs
src/helpers/: app_credentials.rs  commons.rs  gen_pkce.rs  hmac_signature.rs  keypair.rs  keyval.rs  oauth.rs  params.rs  request.rs  requests.rs  response.rs  scope.rs  scopes.rs  signature.rs  utils.rs
src/interceptor/: handle_request.rs
src/middlewares/: oauth_params.rs  request_builder.rs  request_header.rs
src/routes/: server.rs
src/setup/: authorize_url.rs  credentials.rs  variables.rs
src/startup/: server.rs  timeout.rs
twitar/: Cargo.toml  README.md  sqlx-data.json
twitar/migrations/: 20220218010840_user_preference.down.sql  20220218010840_user_preference.up.sql  20220218010856_auth_one.down.sql  20220218010856_auth_one.up.sql  20220218011939_auth_two.down.sql  20220218011939_auth_two.up.sql  20220410231713_play_tweets.up.sql  20220415112044_play_tweets.down.sql  20220415112044_play_tweets.up.sql
twitar/src/: base_repository.rs  controllers.rs  entities.rs  errors.rs  helpers.rs  interceptors.rs  lib.rs  middlewares.rs  settings.rs
twitar/src/base_repository/: base_repository.rs  commons.rs  db.rs  oauth_2.rs
twitar/src/configurations/: db_settings.rs  variables.rs
twitar/src/controllers/: authorize_bot.rs  commons.rs  destroy.rs  handle_redirect.rs  health_check.rs  not_found.rs  oauth1.rs  oauth_flow.rs  refresh_token.rs  revoke_token.rs  timeline.rs  user_lookup.rs
twitar/src/controllers/likes/: likes.rs
twitar/src/errors/: response.rs  twitter_errors.rs
twitar/src/helpers/: commons.rs  db.rs  db_helper.rs  gen_pkce.rs  keypair.rs  keyval.rs  request.rs  response.rs  scope.rs
twitar/src/helpers/db_helper/: db.rs  db.test.rs
twitar/src/helpers/gen_pkce/: gen_pkce.rs  gen_pkce.test.rs
twitar/src/helpers/keypair/: keypair.rs  keypair.test.rs
twitar/src/helpers/keyval/: keyval.rs  keyval.test.rs
twitar/src/helpers/request/: request.rs  request.test.rs
twitar/src/helpers/response/: response.rs  response.test.rs
twitar/src/helpers/scope/: scope.rs  scope.test.rs
twitar/src/interceptors/: handle_request.rs
twitar/src/middlewares/: request_params.rs
twitar/src/routes/: server.rs
twitar/src/settings/: app.rs  config.rs  database.rs  variables.rs
twitar/src/startup/: server.rs
twitar/tests/helpers/: app.rs
twitar_macro/: Cargo.toml
twitar_macro_derive/: Cargo.toml
