[package]
name = "twitar"
version = "0.1.0"
edition = "2021"
author = "Tolumide Shopein <tolumideshopein@gmail.com>"

[lib]
path = "src/lib.rs"

[[bin]]
name = "playtweet"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.16", features = ["full"]}
url = { version = "2.2.2", features = ["serde"] }
pkce = "0.1.1"
config = "0.11.0"
dotenv = "0.15.0"
serde = { version = "1.0.133", features = ["derive"] }
base64 = "0.13.0"
secrecy = "0.8.0"
futures = "0.3.19"
lazy_static = "1.4.0"
serde_derive = "1.0.133"
tokio = { version = "1.15.0", features = ["full"] }
http = "0.2.6"
redis = "0.21.5"
urlencoding = "2.1.0"
uuid = { version = "0.8.2", features = ["v4"] }
hmac = "0.12.0"
sha1 = "0.10.0"
hyper-tls = "0.5.0"
serde_json = "1.0.75"
derive_more = "0.99.17"