[package]
name = "twitar"
version = "0.1.0"
edition = "2021"
author = "Tolumide Shopein <tolumideshopein@gmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "twitar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.53"
base64 = "0.13.0"
config = "0.11.0"
derive_more = "0.99.17"
dotenv = "0.15.0"
futures = "0.3.19"
hmac = "0.12.0"
http = "0.2.6"
hyper = { version = "0.14.16", features = ["full"]}
pkce = "0.1.1"
hyper-tls = "0.5.0"
redis = { version="0.21.5", features=["tokio-native-tls-comp", "tokio-comp", "aio", "connection-manager", "cluster"] }
secrecy = "0.8.0"
serde = { version = "1.0.133", features = ["derive"] }
serde-aux = "3.0.1"
serde_derive = "1.0.133"
serde_json = "1.0.75"
sha1 = "0.10.0"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
tower = { version = "0.4.12", features=["retry", "limit", "timeout"] }
url = { version = "2.2.2", features = ["serde"] }
urlencoding = "2.1.0"
uuid = { version = "0.8.2", features = ["v4"] }


[dependencies.sqlx]
version = "0.5"
default-features = false
features = [ 
    "runtime-tokio-rustls", 
    "json", 
    "chrono", 
    "uuid", 
    "macros", 
    "tls",
    "postgres",
    "migrate",
    "offline"
]